# ghostscan

./: .gitignore  PKGBUILD  README.md  build.zig  build.zig.zon  ghostscan.zig
debian/: control  rules
gscan/: Cargo.toml
gscan/src/: main.rs
src/: main.zig  root.zig  test.zig
