[package]
name = "gscan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cidr-utils = "0.5"
indicatif = "0.17"
config = "0.13"
crossterm = "0.27"
